tools/postrepair_validation.txt
starter title: PASS
ribbon section: PASS
help ribbon tabs: PASS
help layout section: PASS
help style section: PASS
help heading encoded: PASS
help heading literal: FAIL
old top toolbar removed: PASS
old edit toolbar removed: PASS
licence start preserved: PASS
licence end preserved: PASS
valid document tail: PASS
Node syntax failure in script 3:

/tmp/tmpu43ya8hi/script-3.js:96
            await target.requestFullscreen();
            ^^^^^

SyntaxError: await is only valid in async functions and the top level bodies of modules
    at wrapSafe (node:internal/modules/cjs/loader:1713:18)
    at checkSyntax (node:internal/main/check_syntax:78:3)

Node.js v22.23.1

inline JavaScript syntax: FAIL
Total failures: 2
Validation exit status: 1
